--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -1,8 +1,13 @@
 header {
-  margin: 40px 0px 63px 0px;
   justify-content: space-between;
   align-items: center;
   display: flex;
+}
+
+@media all and (max-width: 768px) {
+  header {
+    margin: 20px 0px 20px 0px !important;
+  }
 }
 
 header figure {
@@ -40,7 +45,7 @@ header ul li:not(:first-child) {
 
 header ul li a {
   color: #ff6060;
-  font-size: 24px;
+  font-size: 16px;
   font-weight: 500;
   text-decoration: none;
 }
