--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -1,4 +1,4 @@
-section ul {
+section.home ul {
   background-color: #f6f6f6;
   border-radius: 25px;
   width: 100%;
@@ -10,14 +10,14 @@ section ul {
 }
 
 @media all and (max-width: 768px) {
-  section ul {
+  section.home ul {
     background-color: white;
     padding: 0px;
     flex-direction: column;
   }
 }
 
-section ul li {
+section.home ul li {
   width: 30%;
   height: 340px;
   list-style: none;
@@ -26,12 +26,12 @@ section ul li {
   margin-right: 5%;
 }
 
-section ul li:nth-child(3n) {
+section.home ul li:nth-child(3n) {
   margin-right: 0;
 }
 
 @media all and (max-width: 768px) {
-  section ul li {
+  section.home ul li {
     width: 100%;
     height: 255px;
     margin-bottom: 20px;
@@ -39,14 +39,14 @@ section ul li:nth-child(3n) {
   }
 }
 
-section ul figure {
+section.home ul figure {
   padding: 0px;
   margin: 0px;
   position: relative;
   border-radius: 10px;
 }
 
-section ul figure img {
+section.home ul figure img {
   object-fit: cover;
   width: 100%;
   height: 340px;
@@ -54,12 +54,12 @@ section ul figure img {
 }
 
 @media all and (max-width: 768px) {
-  section ul figure img {
+  section.home ul figure img {
     height: 255px;
   }
 }
 
-section ul figure figcaption {
+section.home ul figure figcaption {
   position: absolute;
   bottom: 3px;
   padding: 20px;
@@ -77,7 +77,7 @@ section ul figure figcaption {
   font-size: 18px;
 }
 
-section h1.home_title {
+section.home h1.home_title {
   background-image: linear-gradient(
       180deg,
       rgba(0, 0, 0, 0.3) 0%,
@@ -100,7 +100,7 @@ section h1.home_title {
 }
 
 @media all and (max-width: 768px) {
-  section h1.home_title {
+  section.home h1.home_title {
     font-size: 24px;
     height: 111px;
     border-radius: 10px;
