--- a/src/styles/Annonces.css
+++ b/src/styles/Annonces.css
@@ -1,6 +1,13 @@
+section.annonces {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+
 section.annonces figure {
   margin: 0px;
   padding: 0px;
+  width: 100%;
 }
 
 section.annonces figure img {
@@ -14,19 +21,49 @@ section.annonces h1 {
   font-size: 36px;
   color: #ff6060;
   font-weight: 500;
+  width: 80%;
+  margin: 30px 0px 0px 0px;
+  padding: 0px;
+}
+
+section.annonces figure.host {
+  padding: 0px;
+  margin: 30px 0px 0px 0px;
+  width: 20%;
+  display: flex;
+  flex-direction: row-reverse;
+  align-items: center;
+}
+
+section.annonces figure.host img {
+  width: 64px;
+  height: 64px;
+  border-radius: 50%;
+}
+
+section.annonces figure.host figcaption {
+  font-size: 18px;
+  color: #ff6060;
+  font-weight: 500;
+  margin-right: 10px;
+  width: 50%;
+  text-align: right;
 }
 
 section.annonces p.location {
   font-size: 18px;
   color: #ff6060;
   font-weight: 500;
+  width: 100%;
+  margin: 0px 0px 20px 0px;
 }
 
 section.annonces ul.tags {
-  margin: 0px;
+  margin: 0px 0px 24px 0px;
   padding: 0px;
   list-style: none;
   display: flex;
+  width: 100%;
 }
 
 section.annonces ul.tags li {
