--- a/src/styles/Dropdowns.css
+++ b/src/styles/Dropdowns.css
@@ -1,27 +1,44 @@
-article.dropdowns {
+section.annonces details.dropdowns {
   width: 47%;
 }
 
-article.dropdowns:nth-child(6) {
+section.a_propos details.dropdowns {
+  width: 100%;
+  margin-bottom: 30px;
+}
+
+details.dropdowns:nth-child(7) {
   margin-right: 6%;
 }
 
-article.dropdowns h2 {
+details.dropdowns summary {
   color: white;
   font-size: 18px;
   background-color: #ff6060;
   padding: 15px 20px;
   border-radius: 10px;
   margin: 0px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
-article.dropdowns p,
-article.dropdowns ul {
+details summary img {
+  transition: all 0.5s;
+}
+
+details:not([open]) summary img {
+  transform: rotate(180deg);
+}
+
+details.dropdowns p,
+details.dropdowns ul {
   color: #ff6060;
   font-size: 18px;
   font-weight: 400;
   background-color: #f6f6f6;
-  margin: 0px;
+  margin: 0px 0px 0px 0px;
   padding: 20px;
   list-style: none;
+  border-radius: 0px 0px 10px 10px;
 }
