--- a/src/styles/Index.css
+++ b/src/styles/Index.css
@@ -12,28 +12,34 @@ body {
 body section,
 body header {
   max-width: 1440px;
-  padding: 0px 100px;
+  padding: 0px 100px !important;
 }
 
 body section {
-  margin: 0px auto;
+  margin: 0px auto !important;
 }
 
 body header {
   margin: 40px auto 63px auto !important;
 }
 
+@media all and (max-width: 768px) {
+  body header {
+    margin: 20px 0px 30px 0px !important;
+  }
+}
+
 @media all and (max-width: 1100px) {
   body section,
   body header {
-    padding: 0px 50px;
+    padding: 0px 50px !important;
   }
 }
 
 @media all and (max-width: 768px) {
   body section,
   body header {
-    padding: 0px 20px;
+    padding: 0px 20px !important;
   }
 }
 
