--- a/src/styles/Index.css
+++ b/src/styles/Index.css
@@ -9,6 +9,16 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+@media all and (max-width: 768px) {
+  body,
+  div#root {
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+  }
+}
+
 body section,
 body header {
   max-width: 1440px;
