--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -5,8 +5,14 @@ footer {
   flex-direction: column;
   align-items: center;
   padding: 66px 20px 30px 20px;
-  margin-top: 30px;
+  margin-top: auto;
 }
+
+/* @media all and (max-width: 768px) {
+  footer {
+    margin-top: auto;
+  }
+} */
 
 footer p {
   padding: 0px;
